<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    tools:context=".ui.fragments.download.DownloadFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="@dimen/_50sdp"
        android:background="@color/bg_navigation_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/montserrat_bold"
            android:includeFontPadding="false"
            android:text="@string/tiktok_video_downloader"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/url_input_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/round_input_background"
        android:padding="4dp"
        app:layout_constraintEnd_toEndOf="@id/constraintLayout"
        app:layout_constraintStart_toStartOf="@id/constraintLayout"
        app:layout_constraintTop_toBottomOf="@id/constraintLayout">

        <EditText
            android:id="@+id/url_input"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:background="@android:color/transparent"
            android:ellipsize="end"
            android:hint="@string/https_www_tiktok_com_z"
            android:importantForAutofill="no"
            android:inputType="textUri"
            android:maxLines="1"
            android:padding="8dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="#B0B0B0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/clear_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/clear_text"
            android:layout_width="0dp"
            android:layout_height="@dimen/_26sdp"
            android:layout_marginTop="@dimen/_4sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_4sdp"
            android:layout_weight="1"
            android:background="@drawable/close_ripple_effect"
            android:contentDescription="@string/clear_text"
            android:src="@drawable/baseline_close_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/downloadFunctions"
        android:layout_width="0dp"
        android:layout_height="@dimen/_38sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/url_input_container"
        app:layout_constraintStart_toStartOf="@+id/url_input_container"
        app:layout_constraintTop_toBottomOf="@+id/url_input_container">

        <TextView
            android:id="@+id/btnPaste"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_weight="1"
            android:background="@drawable/tv_paste"
            android:fontFamily="@font/montserrat_bold"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/paste"
            android:textColor="@color/background"
            android:textSize="@dimen/_11ssp" />

        <TextView
            android:id="@+id/btnDownload"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_weight="1"
            android:background="@drawable/tv_download"
            android:fontFamily="@font/montserrat_bold"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/download"
            android:textColor="@color/background"
            android:textSize="@dimen/_11ssp" />

    </LinearLayout>


    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="13dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/url_input_container"
        app:layout_constraintStart_toStartOf="@+id/url_input_container"
        app:layout_constraintTop_toBottomOf="@+id/downloadFunctions"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="NotSibling">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cdDownloadOptions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/_8sdp"
                android:visibility="gone">


                <ImageView
                    android:id="@+id/downloadAnother"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:background="@drawable/close_ripple_effect"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/baseline_close_24"

                    app:layout_constraintBottom_toBottomOf="@+id/src_image"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toEndOf="@+id/src_image"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

                <ImageView
                    android:id="@+id/src_image"
                    android:layout_width="@dimen/_150sdp"
                    android:layout_height="@dimen/_150sdp"
                    android:contentDescription="@string/img_profile"
                    android:scaleType="fitXY"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/cdAudio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="#009688"
                    android:text="@string/download_audio_mp3"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/src_image" />

                <Button
                    android:id="@+id/cdOriginalVideo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#00BCD4"
                    android:text="@string/download_original_video"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cdAudio" />

                <Button
                    android:id="@+id/cdDownloadHD"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#03A9F4"
                    android:text="@string/download_hd_video"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cdOriginalVideo" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>


    </ScrollView>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="7dp" />


</androidx.constraintlayout.widget.ConstraintLayout>